slight method-adjustments