@@ -44,4 +44,19 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>core.KarteiKartenSystem</mainClass>
+                    <commandlineArgs>
+                        --enable-native-access=ALL-UNNAMED
+                    </commandlineArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
